fixed scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -42,5 +42,9 @@
         width: calc(100% - 2rem);
         top: 50px;
     }
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
     
 }
